etapa3/parser.output
Terminais sem uso na gramática

    "type"
    "error"


Gramática

    0 $accept: program $end

    1 program: list ';'

    2 list: element
    3     | element ',' list

    4 element: function_definition
    5        | variable_declaration

    6 function_definition: header body

    7 header: "identifier" "->" var_type optional_parameter_list ":="

    8 optional_parameter_list: ε
    9                        | "with" parameter_list
   10                        | parameter_list

   11 parameter_list: parameter
   12               | parameter_list ',' parameter

   13 parameter: "identifier" ":=" var_type

   14 body: command_block

   15 command_block: '[' command_sequence ']'
   16              | '[' ']'

   17 command_sequence: simple_command
   18                 | simple_command command_sequence

   19 simple_command: variable_declaration_with_instantiation
   20               | function_call
   21               | attribution_command
   22               | return_command
   23               | flow_control_command

   24 variable_declaration: "variable" "identifier" ":=" var_type

   25 variable_declaration_with_instantiation: "variable" "identifier" ":=" var_type optional_instantiation

   26 var_type: "decimal"
   27         | "integer"

   28 optional_instantiation: "with" literal
   29                       | ε

   30 literal: "integer literal"
   31        | "decimal literal"

   32 attribution_command: "identifier" ":=" expression

   33 function_call: "identifier" '(' args ')'

   34 args: expression
   35     | expression ',' args
   36     | ε

   37 return_command: "return" expression ":=" var_type

   38 flow_control_command: conditional_struct
   39                     | iterative_struct

   40 conditional_struct: "if" '(' expression ')' command_block else_block

   41 else_block: "else" command_block
   42           | ε

   43 iterative_struct: "while" '(' expression ')' command_block

   44 expression: logical_or_expression

   45 logical_or_expression: logical_and_expression
   46                      | logical_or_expression '|' logical_and_expression

   47 logical_and_expression: equality_expression
   48                       | logical_and_expression '&' equality_expression

   49 equality_expression: relational_expression
   50                    | equality_expression "==" relational_expression
   51                    | equality_expression "!=" relational_expression

   52 relational_expression: additive_expression
   53                      | relational_expression '<' additive_expression
   54                      | relational_expression '>' additive_expression
   55                      | relational_expression "<=" additive_expression
   56                      | relational_expression ">=" additive_expression

   57 additive_expression: multiplicative_expression
   58                    | additive_expression '+' multiplicative_expression
   59                    | additive_expression '-' multiplicative_expression

   60 multiplicative_expression: unary_expression
   61                          | multiplicative_expression '*' unary_expression
   62                          | multiplicative_expression '/' unary_expression
   63                          | multiplicative_expression '%' unary_expression

   64 unary_expression: primary_expression
   65                 | '!' unary_expression
   66                 | '+' unary_expression
   67                 | '-' unary_expression

   68 primary_expression: "identifier"
   69                   | "integer literal"
   70                   | "decimal literal"
   71                   | '(' expression ')'
   72                   | function_call


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '!' (33) 65
    '%' (37) 63
    '&' (38) 48
    '(' (40) 33 40 43 71
    ')' (41) 33 40 43 71
    '*' (42) 61
    '+' (43) 58 66
    ',' (44) 3 12 35
    '-' (45) 59 67
    '/' (47) 62
    ';' (59) 1
    '<' (60) 53
    '>' (62) 54
    '[' (91) 15 16
    ']' (93) 15 16
    '|' (124) 46
    error (256)
    "type" (258)
    "variable" (259) 24 25
    "else" (260) 41
    "decimal" (261) 26
    "if" (262) 40
    "integer" (263) 27
    ":=" (264) 7 13 24 25 32 37
    "return" (265) 37
    "->" (266) 7
    "while" (267) 43
    "with" (268) 9 28
    "<=" (269) 55
    ">=" (270) 56
    "==" (271) 50
    "!=" (272) 51
    "identifier" <lexical_value> (273) 7 13 24 25 32 33 68
    "integer literal" <lexical_value> (274) 30 69
    "decimal literal" <lexical_value> (275) 31 70
    "error" (276)


Não terminais com as regras onde eles aparecem

    $accept (38)
        à esquerda: 0
    program <node> (39)
        à esquerda: 1
        à direita: 0
    list <node> (40)
        à esquerda: 2 3
        à direita: 1 3
    element <node> (41)
        à esquerda: 4 5
        à direita: 2 3
    function_definition <node> (42)
        à esquerda: 6
        à direita: 4
    header <node> (43)
        à esquerda: 7
        à direita: 6
    optional_parameter_list <node> (44)
        à esquerda: 8 9 10
        à direita: 7
    parameter_list <node> (45)
        à esquerda: 11 12
        à direita: 9 10 12
    parameter <node> (46)
        à esquerda: 13
        à direita: 11 12
    body <node> (47)
        à esquerda: 14
        à direita: 6
    command_block <node> (48)
        à esquerda: 15 16
        à direita: 14 40 41 43
    command_sequence <node> (49)
        à esquerda: 17 18
        à direita: 15 18
    simple_command <node> (50)
        à esquerda: 19 20 21 22 23
        à direita: 17 18
    variable_declaration <node> (51)
        à esquerda: 24
        à direita: 5
    variable_declaration_with_instantiation <node> (52)
        à esquerda: 25
        à direita: 19
    var_type <node> (53)
        à esquerda: 26 27
        à direita: 7 13 24 25 37
    optional_instantiation <node> (54)
        à esquerda: 28 29
        à direita: 25
    literal <node> (55)
        à esquerda: 30 31
        à direita: 28
    attribution_command <node> (56)
        à esquerda: 32
        à direita: 21
    function_call <node> (57)
        à esquerda: 33
        à direita: 20 72
    args <node> (58)
        à esquerda: 34 35 36
        à direita: 33 35
    return_command <node> (59)
        à esquerda: 37
        à direita: 22
    flow_control_command <node> (60)
        à esquerda: 38 39
        à direita: 23
    conditional_struct <node> (61)
        à esquerda: 40
        à direita: 38
    else_block <node> (62)
        à esquerda: 41 42
        à direita: 40
    iterative_struct <node> (63)
        à esquerda: 43
        à direita: 39
    expression <node> (64)
        à esquerda: 44
        à direita: 32 34 35 37 40 43 71
    logical_or_expression <node> (65)
        à esquerda: 45 46
        à direita: 44 46
    logical_and_expression <node> (66)
        à esquerda: 47 48
        à direita: 45 46 48
    equality_expression <node> (67)
        à esquerda: 49 50 51
        à direita: 47 48 50 51
    relational_expression <node> (68)
        à esquerda: 52 53 54 55 56
        à direita: 49 50 51 53 54 55 56
    additive_expression <node> (69)
        à esquerda: 57 58 59
        à direita: 52 53 54 55 56 58 59
    multiplicative_expression <node> (70)
        à esquerda: 60 61 62 63
        à direita: 57 58 59 61 62 63
    unary_expression <node> (71)
        à esquerda: 64 65 66 67
        à direita: 60 61 62 63 65 66 67
    primary_expression <node> (72)
        à esquerda: 68 69 70 71 72
        à direita: 64


Estado 0

    0 $accept: • program $end

    "variable"    deslocar, e ir ao estado 1
    "identifier"  deslocar, e ir ao estado 2

    program               ir ao estado 3
    list                  ir ao estado 4
    element               ir ao estado 5
    function_definition   ir ao estado 6
    header                ir ao estado 7
    variable_declaration  ir ao estado 8


Estado 1

   24 variable_declaration: "variable" • "identifier" ":=" var_type

    "identifier"  deslocar, e ir ao estado 9


Estado 2

    7 header: "identifier" • "->" var_type optional_parameter_list ":="

    "->"  deslocar, e ir ao estado 10


Estado 3

    0 $accept: program • $end

    $end  deslocar, e ir ao estado 11


Estado 4

    1 program: list • ';'

    ';'  deslocar, e ir ao estado 12


Estado 5

    2 list: element •
    3     | element • ',' list

    ','  deslocar, e ir ao estado 13

    $padrão  reduzir usando a regra 2 (list)


Estado 6

    4 element: function_definition •

    $padrão  reduzir usando a regra 4 (element)


Estado 7

    6 function_definition: header • body

    '['  deslocar, e ir ao estado 14

    body           ir ao estado 15
    command_block  ir ao estado 16


Estado 8

    5 element: variable_declaration •

    $padrão  reduzir usando a regra 5 (element)


Estado 9

   24 variable_declaration: "variable" "identifier" • ":=" var_type

    ":="  deslocar, e ir ao estado 17


Estado 10

    7 header: "identifier" "->" • var_type optional_parameter_list ":="

    "decimal"  deslocar, e ir ao estado 18
    "integer"  deslocar, e ir ao estado 19

    var_type  ir ao estado 20


Estado 11

    0 $accept: program $end •

    $padrão  aceitar


Estado 12

    1 program: list ';' •

    $padrão  reduzir usando a regra 1 (program)


Estado 13

    3 list: element ',' • list

    "variable"    deslocar, e ir ao estado 1
    "identifier"  deslocar, e ir ao estado 2

    list                  ir ao estado 21
    element               ir ao estado 5
    function_definition   ir ao estado 6
    header                ir ao estado 7
    variable_declaration  ir ao estado 8


Estado 14

   15 command_block: '[' • command_sequence ']'
   16              | '[' • ']'

    "variable"    deslocar, e ir ao estado 22
    "if"          deslocar, e ir ao estado 23
    "return"      deslocar, e ir ao estado 24
    "while"       deslocar, e ir ao estado 25
    "identifier"  deslocar, e ir ao estado 26
    ']'           deslocar, e ir ao estado 27

    command_sequence                         ir ao estado 28
    simple_command                           ir ao estado 29
    variable_declaration_with_instantiation  ir ao estado 30
    attribution_command                      ir ao estado 31
    function_call                            ir ao estado 32
    return_command                           ir ao estado 33
    flow_control_command                     ir ao estado 34
    conditional_struct                       ir ao estado 35
    iterative_struct                         ir ao estado 36


Estado 15

    6 function_definition: header body •

    $padrão  reduzir usando a regra 6 (function_definition)


Estado 16

   14 body: command_block •

    $padrão  reduzir usando a regra 14 (body)


Estado 17

   24 variable_declaration: "variable" "identifier" ":=" • var_type

    "decimal"  deslocar, e ir ao estado 18
    "integer"  deslocar, e ir ao estado 19

    var_type  ir ao estado 37


Estado 18

   26 var_type: "decimal" •

    $padrão  reduzir usando a regra 26 (var_type)


Estado 19

   27 var_type: "integer" •

    $padrão  reduzir usando a regra 27 (var_type)


Estado 20

    7 header: "identifier" "->" var_type • optional_parameter_list ":="

    "with"        deslocar, e ir ao estado 38
    "identifier"  deslocar, e ir ao estado 39

    $padrão  reduzir usando a regra 8 (optional_parameter_list)

    optional_parameter_list  ir ao estado 40
    parameter_list           ir ao estado 41
    parameter                ir ao estado 42


Estado 21

    3 list: element ',' list •

    $padrão  reduzir usando a regra 3 (list)


Estado 22

   25 variable_declaration_with_instantiation: "variable" • "identifier" ":=" var_type optional_instantiation

    "identifier"  deslocar, e ir ao estado 43


Estado 23

   40 conditional_struct: "if" • '(' expression ')' command_block else_block

    '('  deslocar, e ir ao estado 44


Estado 24

   37 return_command: "return" • expression ":=" var_type

    "identifier"       deslocar, e ir ao estado 45
    "integer literal"  deslocar, e ir ao estado 46
    "decimal literal"  deslocar, e ir ao estado 47
    '('                deslocar, e ir ao estado 48
    '+'                deslocar, e ir ao estado 49
    '-'                deslocar, e ir ao estado 50
    '!'                deslocar, e ir ao estado 51

    function_call              ir ao estado 52
    expression                 ir ao estado 53
    logical_or_expression      ir ao estado 54
    logical_and_expression     ir ao estado 55
    equality_expression        ir ao estado 56
    relational_expression      ir ao estado 57
    additive_expression        ir ao estado 58
    multiplicative_expression  ir ao estado 59
    unary_expression           ir ao estado 60
    primary_expression         ir ao estado 61


Estado 25

   43 iterative_struct: "while" • '(' expression ')' command_block

    '('  deslocar, e ir ao estado 62


Estado 26

   32 attribution_command: "identifier" • ":=" expression
   33 function_call: "identifier" • '(' args ')'

    ":="  deslocar, e ir ao estado 63
    '('   deslocar, e ir ao estado 64


Estado 27

   16 command_block: '[' ']' •

    $padrão  reduzir usando a regra 16 (command_block)


Estado 28

   15 command_block: '[' command_sequence • ']'

    ']'  deslocar, e ir ao estado 65


Estado 29

   17 command_sequence: simple_command •
   18                 | simple_command • command_sequence

    "variable"    deslocar, e ir ao estado 22
    "if"          deslocar, e ir ao estado 23
    "return"      deslocar, e ir ao estado 24
    "while"       deslocar, e ir ao estado 25
    "identifier"  deslocar, e ir ao estado 26

    $padrão  reduzir usando a regra 17 (command_sequence)

    command_sequence                         ir ao estado 66
    simple_command                           ir ao estado 29
    variable_declaration_with_instantiation  ir ao estado 30
    attribution_command                      ir ao estado 31
    function_call                            ir ao estado 32
    return_command                           ir ao estado 33
    flow_control_command                     ir ao estado 34
    conditional_struct                       ir ao estado 35
    iterative_struct                         ir ao estado 36


Estado 30

   19 simple_command: variable_declaration_with_instantiation •

    $padrão  reduzir usando a regra 19 (simple_command)


Estado 31

   21 simple_command: attribution_command •

    $padrão  reduzir usando a regra 21 (simple_command)


Estado 32

   20 simple_command: function_call •

    $padrão  reduzir usando a regra 20 (simple_command)


Estado 33

   22 simple_command: return_command •

    $padrão  reduzir usando a regra 22 (simple_command)


Estado 34

   23 simple_command: flow_control_command •

    $padrão  reduzir usando a regra 23 (simple_command)


Estado 35

   38 flow_control_command: conditional_struct •

    $padrão  reduzir usando a regra 38 (flow_control_command)


Estado 36

   39 flow_control_command: iterative_struct •

    $padrão  reduzir usando a regra 39 (flow_control_command)


Estado 37

   24 variable_declaration: "variable" "identifier" ":=" var_type •

    $padrão  reduzir usando a regra 24 (variable_declaration)


Estado 38

    9 optional_parameter_list: "with" • parameter_list

    "identifier"  deslocar, e ir ao estado 39

    parameter_list  ir ao estado 67
    parameter       ir ao estado 42


Estado 39

   13 parameter: "identifier" • ":=" var_type

    ":="  deslocar, e ir ao estado 68


Estado 40

    7 header: "identifier" "->" var_type optional_parameter_list • ":="

    ":="  deslocar, e ir ao estado 69


Estado 41

   10 optional_parameter_list: parameter_list •
   12 parameter_list: parameter_list • ',' parameter

    ','  deslocar, e ir ao estado 70

    $padrão  reduzir usando a regra 10 (optional_parameter_list)


Estado 42

   11 parameter_list: parameter •

    $padrão  reduzir usando a regra 11 (parameter_list)


Estado 43

   25 variable_declaration_with_instantiation: "variable" "identifier" • ":=" var_type optional_instantiation

    ":="  deslocar, e ir ao estado 71


Estado 44

   40 conditional_struct: "if" '(' • expression ')' command_block else_block

    "identifier"       deslocar, e ir ao estado 45
    "integer literal"  deslocar, e ir ao estado 46
    "decimal literal"  deslocar, e ir ao estado 47
    '('                deslocar, e ir ao estado 48
    '+'                deslocar, e ir ao estado 49
    '-'                deslocar, e ir ao estado 50
    '!'                deslocar, e ir ao estado 51

    function_call              ir ao estado 52
    expression                 ir ao estado 72
    logical_or_expression      ir ao estado 54
    logical_and_expression     ir ao estado 55
    equality_expression        ir ao estado 56
    relational_expression      ir ao estado 57
    additive_expression        ir ao estado 58
    multiplicative_expression  ir ao estado 59
    unary_expression           ir ao estado 60
    primary_expression         ir ao estado 61


Estado 45

   33 function_call: "identifier" • '(' args ')'
   68 primary_expression: "identifier" •

    '('  deslocar, e ir ao estado 64

    $padrão  reduzir usando a regra 68 (primary_expression)


Estado 46

   69 primary_expression: "integer literal" •

    $padrão  reduzir usando a regra 69 (primary_expression)


Estado 47

   70 primary_expression: "decimal literal" •

    $padrão  reduzir usando a regra 70 (primary_expression)


Estado 48

   71 primary_expression: '(' • expression ')'

    "identifier"       deslocar, e ir ao estado 45
    "integer literal"  deslocar, e ir ao estado 46
    "decimal literal"  deslocar, e ir ao estado 47
    '('                deslocar, e ir ao estado 48
    '+'                deslocar, e ir ao estado 49
    '-'                deslocar, e ir ao estado 50
    '!'                deslocar, e ir ao estado 51

    function_call              ir ao estado 52
    expression                 ir ao estado 73
    logical_or_expression      ir ao estado 54
    logical_and_expression     ir ao estado 55
    equality_expression        ir ao estado 56
    relational_expression      ir ao estado 57
    additive_expression        ir ao estado 58
    multiplicative_expression  ir ao estado 59
    unary_expression           ir ao estado 60
    primary_expression         ir ao estado 61


Estado 49

   66 unary_expression: '+' • unary_expression

    "identifier"       deslocar, e ir ao estado 45
    "integer literal"  deslocar, e ir ao estado 46
    "decimal literal"  deslocar, e ir ao estado 47
    '('                deslocar, e ir ao estado 48
    '+'                deslocar, e ir ao estado 49
    '-'                deslocar, e ir ao estado 50
    '!'                deslocar, e ir ao estado 51

    function_call       ir ao estado 52
    unary_expression    ir ao estado 74
    primary_expression  ir ao estado 61


Estado 50

   67 unary_expression: '-' • unary_expression

    "identifier"       deslocar, e ir ao estado 45
    "integer literal"  deslocar, e ir ao estado 46
    "decimal literal"  deslocar, e ir ao estado 47
    '('                deslocar, e ir ao estado 48
    '+'                deslocar, e ir ao estado 49
    '-'                deslocar, e ir ao estado 50
    '!'                deslocar, e ir ao estado 51

    function_call       ir ao estado 52
    unary_expression    ir ao estado 75
    primary_expression  ir ao estado 61


Estado 51

   65 unary_expression: '!' • unary_expression

    "identifier"       deslocar, e ir ao estado 45
    "integer literal"  deslocar, e ir ao estado 46
    "decimal literal"  deslocar, e ir ao estado 47
    '('                deslocar, e ir ao estado 48
    '+'                deslocar, e ir ao estado 49
    '-'                deslocar, e ir ao estado 50
    '!'                deslocar, e ir ao estado 51

    function_call       ir ao estado 52
    unary_expression    ir ao estado 76
    primary_expression  ir ao estado 61


Estado 52

   72 primary_expression: function_call •

    $padrão  reduzir usando a regra 72 (primary_expression)


Estado 53

   37 return_command: "return" expression • ":=" var_type

    ":="  deslocar, e ir ao estado 77


Estado 54

   44 expression: logical_or_expression •
   46 logical_or_expression: logical_or_expression • '|' logical_and_expression

    '|'  deslocar, e ir ao estado 78

    $padrão  reduzir usando a regra 44 (expression)


Estado 55

   45 logical_or_expression: logical_and_expression •
   48 logical_and_expression: logical_and_expression • '&' equality_expression

    '&'  deslocar, e ir ao estado 79

    $padrão  reduzir usando a regra 45 (logical_or_expression)


Estado 56

   47 logical_and_expression: equality_expression •
   50 equality_expression: equality_expression • "==" relational_expression
   51                    | equality_expression • "!=" relational_expression

    "=="  deslocar, e ir ao estado 80
    "!="  deslocar, e ir ao estado 81

    $padrão  reduzir usando a regra 47 (logical_and_expression)


Estado 57

   49 equality_expression: relational_expression •
   53 relational_expression: relational_expression • '<' additive_expression
   54                      | relational_expression • '>' additive_expression
   55                      | relational_expression • "<=" additive_expression
   56                      | relational_expression • ">=" additive_expression

    "<="  deslocar, e ir ao estado 82
    ">="  deslocar, e ir ao estado 83
    '<'   deslocar, e ir ao estado 84
    '>'   deslocar, e ir ao estado 85

    $padrão  reduzir usando a regra 49 (equality_expression)


Estado 58

   52 relational_expression: additive_expression •
   58 additive_expression: additive_expression • '+' multiplicative_expression
   59                    | additive_expression • '-' multiplicative_expression

    '+'  deslocar, e ir ao estado 86
    '-'  deslocar, e ir ao estado 87

    $padrão  reduzir usando a regra 52 (relational_expression)


Estado 59

   57 additive_expression: multiplicative_expression •
   61 multiplicative_expression: multiplicative_expression • '*' unary_expression
   62                          | multiplicative_expression • '/' unary_expression
   63                          | multiplicative_expression • '%' unary_expression

    '*'  deslocar, e ir ao estado 88
    '/'  deslocar, e ir ao estado 89
    '%'  deslocar, e ir ao estado 90

    $padrão  reduzir usando a regra 57 (additive_expression)


Estado 60

   60 multiplicative_expression: unary_expression •

    $padrão  reduzir usando a regra 60 (multiplicative_expression)


Estado 61

   64 unary_expression: primary_expression •

    $padrão  reduzir usando a regra 64 (unary_expression)


Estado 62

   43 iterative_struct: "while" '(' • expression ')' command_block

    "identifier"       deslocar, e ir ao estado 45
    "integer literal"  deslocar, e ir ao estado 46
    "decimal literal"  deslocar, e ir ao estado 47
    '('                deslocar, e ir ao estado 48
    '+'                deslocar, e ir ao estado 49
    '-'                deslocar, e ir ao estado 50
    '!'                deslocar, e ir ao estado 51

    function_call              ir ao estado 52
    expression                 ir ao estado 91
    logical_or_expression      ir ao estado 54
    logical_and_expression     ir ao estado 55
    equality_expression        ir ao estado 56
    relational_expression      ir ao estado 57
    additive_expression        ir ao estado 58
    multiplicative_expression  ir ao estado 59
    unary_expression           ir ao estado 60
    primary_expression         ir ao estado 61


Estado 63

   32 attribution_command: "identifier" ":=" • expression

    "identifier"       deslocar, e ir ao estado 45
    "integer literal"  deslocar, e ir ao estado 46
    "decimal literal"  deslocar, e ir ao estado 47
    '('                deslocar, e ir ao estado 48
    '+'                deslocar, e ir ao estado 49
    '-'                deslocar, e ir ao estado 50
    '!'                deslocar, e ir ao estado 51

    function_call              ir ao estado 52
    expression                 ir ao estado 92
    logical_or_expression      ir ao estado 54
    logical_and_expression     ir ao estado 55
    equality_expression        ir ao estado 56
    relational_expression      ir ao estado 57
    additive_expression        ir ao estado 58
    multiplicative_expression  ir ao estado 59
    unary_expression           ir ao estado 60
    primary_expression         ir ao estado 61


Estado 64

   33 function_call: "identifier" '(' • args ')'

    "identifier"       deslocar, e ir ao estado 45
    "integer literal"  deslocar, e ir ao estado 46
    "decimal literal"  deslocar, e ir ao estado 47
    '('                deslocar, e ir ao estado 48
    '+'                deslocar, e ir ao estado 49
    '-'                deslocar, e ir ao estado 50
    '!'                deslocar, e ir ao estado 51

    $padrão  reduzir usando a regra 36 (args)

    function_call              ir ao estado 52
    args                       ir ao estado 93
    expression                 ir ao estado 94
    logical_or_expression      ir ao estado 54
    logical_and_expression     ir ao estado 55
    equality_expression        ir ao estado 56
    relational_expression      ir ao estado 57
    additive_expression        ir ao estado 58
    multiplicative_expression  ir ao estado 59
    unary_expression           ir ao estado 60
    primary_expression         ir ao estado 61


Estado 65

   15 command_block: '[' command_sequence ']' •

    $padrão  reduzir usando a regra 15 (command_block)


Estado 66

   18 command_sequence: simple_command command_sequence •

    $padrão  reduzir usando a regra 18 (command_sequence)


Estado 67

    9 optional_parameter_list: "with" parameter_list •
   12 parameter_list: parameter_list • ',' parameter

    ','  deslocar, e ir ao estado 70

    $padrão  reduzir usando a regra 9 (optional_parameter_list)


Estado 68

   13 parameter: "identifier" ":=" • var_type

    "decimal"  deslocar, e ir ao estado 18
    "integer"  deslocar, e ir ao estado 19

    var_type  ir ao estado 95


Estado 69

    7 header: "identifier" "->" var_type optional_parameter_list ":=" •

    $padrão  reduzir usando a regra 7 (header)


Estado 70

   12 parameter_list: parameter_list ',' • parameter

    "identifier"  deslocar, e ir ao estado 39

    parameter  ir ao estado 96


Estado 71

   25 variable_declaration_with_instantiation: "variable" "identifier" ":=" • var_type optional_instantiation

    "decimal"  deslocar, e ir ao estado 18
    "integer"  deslocar, e ir ao estado 19

    var_type  ir ao estado 97


Estado 72

   40 conditional_struct: "if" '(' expression • ')' command_block else_block

    ')'  deslocar, e ir ao estado 98


Estado 73
